fix overflow

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -21,7 +21,7 @@ body {
   height: 100vh;
   border-radius: $text-size;
   filter: blur(1px);
-  overflow-y: hidden;
+  overflow: hidden;
 }
 
 .textwrap {
